updated the readme

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,7 +12,7 @@
     "This notebook performs exploratory data analysis (EDA) on a coffee shop sales dataset to understand customer behavior, sales patterns, and business insights. The analysis uses pandas for data manipulation, matplotlib and seaborn for visualizations.\n",
     "\n",
     "## Dataset Information\n",
-    "- **Source**: ![Kaggle - Coffee Sales Dataset](https://www.kaggle.com/datasets/navjotkaushal/coffee-sales-dataset/data)(https://www.kaggle.com/datasets/navjotkaushal/coffee-sales-dataset/data)\n",
+    "- **Source**: [Kaggle - Coffee Sales Dataset](https://www.kaggle.com/datasets/navjotkaushal/coffee-sales-dataset/data)\n",
     "- **Size**: 3,547 transactions\n",
     "- **Columns**: 11 features including temporal, product, and transaction data\n",
     "- **Key Variables**:\n",
@@ -633,7 +633,6 @@
     "\n",
     "### Business Intelligence\n",
     "- Customer behavior patterns by time of day\n",
-    "- Payment method preferences\n",
     "- Seasonal trends in coffee consumption\n",
     "\n",
     "## Visualization Types Used\n",
